great changes notes on django forms that we'll c

--- a/templates/restaurantReviews/create.html
+++ b/templates/restaurantReviews/create.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<!--We will have a Django form here that will let the user create a new review
+for a restaurant.  They will enter the reviewer name, a restaurant, a rating,
+and some review notes-->
 
+<!--We will have a separate Django form for creating a new restaurant, which includes
+the restaurant name, street address, city, zip code, type, and website-->
 
 {% endblock %}
