--- a/templates/restaurantReviews/index.html
+++ b/templates/restaurantReviews/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<!--This will eventually be a table that displays the data from our review database-->
 <table class="table table-bordered">
     <thead class="thead-dark">
       <tr>
