added create template

--- a/templates/restaurantReviews/create.html
+++ b/templates/restaurantReviews/create.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-
-
+<div class="container">
+    <form>
+        <label for="restaurantTitle">Restaurant Title</label><br>
+        <input type="text" id="restaurantTitle" name="restaurantTitle"><br>
+        <label for="movieReview">Restaurant Review</label>
+        <input type="text" id="restaurantReview" name="restaurantReview"><br>
+    </form>
+</div>
 {% endblock %}
