--- a/templates/restaurantReviews/index.html
+++ b/templates/restaurantReviews/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
+{{ form|crispy }}
 <!--This will eventually be a table that displays the data from our review database-->
 <table class="table table-bordered">
     <thead class="thead-dark">
