--- a/templates/restaurantReviews/create.html
+++ b/templates/restaurantReviews/create.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 {% block content %}
-<form>
-    <label for="movieTitle">Movie Title</label><br>
-    <input type="text" id="movieTitle" name="'movieTitle"><br>
-    <label for="movieReview">Movie Review</label>
-    <input type="text" id="movieReview" name="movieReview"><br>
+<form method="POST">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <input class = 'btn btn-success btn-block' type='submit' value = 'Add'>
 </form>
 
 {% endblock %}
