--- a/templates/restaurantReviews/update.html
+++ b/templates/restaurantReviews/update.html
@@ -1,7 +1,27 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
+<div class = "container">
+    <div class = "text-left">
+        <h2 class = "section=heading text-uppercase">Review:</h2>
+    </div>
+    <br>
+    <form name="form" method="post" action="{% url 'update' reviewID=record.id%}">
+        {% csrf_token %}
+        <input type = "hidden" id="id" name="id" value="{{record.id}}">
+        
+        <label for= 'rating'>Rating:</label>
+        <input type="number" name="rating" id="rating" value="{{record.rating}}" required>
+        <br><br>
 
+        <label for= 'notes'>Notes:</label>
+        <input type="textarea" name="notes" id="notes" value="{{record.notes}}" required>
+        <br><br>
+
+
+        <button type="submit">Update</button>
+    </form>
 
 {% endblock %}
