--- a/templates/restaurantReviews/index.html
+++ b/templates/restaurantReviews/index.html
@@ -5,9 +5,14 @@
 <!--This will eventually be a table that displays the data from our review database-->
 <h1>My Restaurants:</h1>
 <br>
+<a href="{% url 'createRestaurantView' %}">Add Restaurant</a>
+<br>
+<br>
 {% for restaurant in rest %}
 <h3>  {{restaurant.restaurant_name}} </h3>
 <a href="{% url 'restaurantDetails' restID=restaurant.id %}">View Restaurant Details</a>
+<br>
+<a href="{% url 'create' %}">Add Review</a>
 {% for review in review %}
 {% if review.restaurant.id == restaurant.id %}
 <p>Rating: {{review.rating}}</p>
