--- a/templates/restaurantReviews/addRestaurant.html
+++ b/templates/restaurantReviews/addRestaurant.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-<a href="{% url 'index' %}">Back</a>
+<a href="{% url 'index' %}">Back to homepage</a>
 <form method="POST">
     {% csrf_token %}
     {{ form|crispy }}
