Multitudenous bug fixes and style improvements

--- a/templates/restaurantReviews/addReviewer.html
+++ b/templates/restaurantReviews/addReviewer.html
@@ -8,5 +8,7 @@
     {{ form|crispy }}
     <input class = 'btn btn-success btn-block' type='submit' value = 'Add'>
 </form>
+<br>
+<a href="{% url 'allReviewers' %}">Back</a>
 
 {% endblock %}
