--- a/templates/base.html
+++ b/templates/base.html
@@ -5,14 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="https://freesvg.org/img/simplefastfoodicon.png" />
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     <title>Restaurant Reviews</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
-        body {background-color: #f0ffff; padding: 90px 200px;}
+        body {padding: 40px 200px;}
     </style>
 </head>
 <body>
     {% block content%}
     {% endblock %}
+    <footer class="footer py-4">
+        <div class="container">
+            <div class="row align-items-center">
+                <div>Copyright ©Restaurant Review Central 2022</div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
