--- a/templates/restaurantReviews/addReviewer.html
+++ b/templates/restaurantReviews/addReviewer.html
@@ -3,12 +3,13 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<form method="POST">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <input class = 'btn btn-success btn-block' type='submit' value = 'Add'>
-</form>
-<br>
-<a href="{% url 'allReviewers' %}">Back</a>
+<div style="background-color: #616161; color: #FFFFFF; padding: 10px;">
+    <a href="{% url 'allReviewers' %}">Back</a><br>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <input class = 'btn btn-success btn-block' type='submit' value = 'Add'>
+    </form>
+</div>
 
 {% endblock %}
