--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -55,9 +55,10 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
+  background-color: whitesmoke;
   text-align: left;
-  background-color: #fff;
 }
+
 
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
