--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,17 @@
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     <title>Restaurant Reviews</title>
     <style>
-        body {padding: 40px 200px;}
+        body {padding: 40px 200px;
+            background-image:
+            linear-gradient(0deg,
+              rgba(245,70,66, 0.75),
+              rgba(255,255,255, 0.95)), url('https://images.pexels.com/photos/370984/pexels-photo-370984.jpeg');            
+            background-size: cover;
+            background-repeat: no-repeat;}
     </style>
 </head>
 <body>
+    
     {% block content%}
     {% endblock %}
     <footer class="footer py-4">
