--- a/templates/restaurantReviews/editReviewer.html
+++ b/templates/restaurantReviews/editReviewer.html
@@ -3,9 +3,9 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class = "container">
+<div class = "container" style="background-color: #616161; color: #FFFFFF; padding: 10px;">
     <div class = "text-left">
-        <h2 class = "section=heading text-uppercase">Reviewers:</h2>
+        <h2 class = "section=heading text-uppercase">Reviewer:</h2>
     </div>
     <br>
     <form name="form" method="post" action="{% url 'updateCust' %}">
