--- a/templates/restaurantReviews/index.html
+++ b/templates/restaurantReviews/index.html
@@ -8,7 +8,7 @@
 <div style="background-color: #616161; color: #FFFFFF; padding: 10px;">
     <a href="{% url 'createRestaurantView' %}">Add Restaurant</a>
     <br>
-    <a href="{% url 'allReviewers' %}"> Show List of Our Reviewers</a>
+    <a href="{% url 'allReviewers' %}"> Show Our Critics</a>
     <br>
     <a href="{% url 'create' %}">Write A Review</a>
 </div>
@@ -38,5 +38,4 @@
 </div>
 <br>
 {% endfor %}
-
 {% endblock %}
