--- a/templates/restaurantReviews/update.html
+++ b/templates/restaurantReviews/update.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class = "container">
+<div class = "container" style="background-color: #616161; color: #FFFFFF; padding: 10px;">
     <div class = "text-left">
         <h2 class = "section=heading text-uppercase">Review:</h2>
     </div>
