--- a/templates/restaurantReviews/viewAllReviewers.html
+++ b/templates/restaurantReviews/viewAllReviewers.html
@@ -2,16 +2,22 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-<a href="{% url 'index' %}">Back to homepage</a>
-<h1>All of our Reviewers:</h1>
+<h1>All of Our Critics:</h1>
+<div style="background-color: #616161; color: #FFFFFF; padding: 10px;">
+    <a href="{% url 'addReviewer' %}">Add Reviewer</a>
+</div><br>
 {% for reviewer in reviewer %}
-<h3>  {{reviewer.first_name}} {{reviewer.last_name}} </h3>
-<a href="{% url 'deleteReviewer' reviewerID=reviewer.id %}">Delete Reviewer</a>  |
-<a href="{% url 'showSingleReviewer' id=reviewer.id %}">Update Reviewer</a>
-<br>
-<br>
-
+<div style="background-color: #616161; color: #FFFFFF; padding: 10px;">
+    <h3>  {{reviewer.first_name}} {{reviewer.last_name}} </h3>
+    <a href="{% url 'deleteReviewer' reviewerID=reviewer.id %}">Delete Reviewer</a>  |
+    <a href="{% url 'showSingleReviewer' id=reviewer.id %}">Update Reviewer</a>
+    <br>
+    <br>
+</div>
 {% endfor %}
-<a href="{% url 'addReviewer' %}">Add Reviewer</a>
+<br>
+<div style="background-color: #616161; color: #FFFFFF; padding: 10px;">
+<a href="{% url 'index' %}">Back to homepage</a>
+</div>
 
 {% endblock %}
