Max value (5-star system), forms fixed

--- a/templates/restaurantReviews/editReviewer.html
+++ b/templates/restaurantReviews/editReviewer.html
@@ -6,6 +6,7 @@
 <div class = "container" style="background-color: #616161; color: #FFFFFF; padding: 10px;">
     <div class = "text-left">
         <h2 class = "section=heading text-uppercase">Reviewer:</h2>
+        <a href="{% url 'allReviewers' %}"> Back</a>
     </div>
     <br>
     <form name="form" method="post" action="{% url 'updateCust' %}">
