--- a/templates/restaurantReviews/updateRestaurant.html
+++ b/templates/restaurantReviews/updateRestaurant.html
@@ -1,15 +1,24 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-
+<style>
+    p {
+        width:100%;
+    }
+    input {
+        width:100%
+    }
+</style>
 <h1>Update Restaurant Info</h1>
 <br>
-<form action="" method='post'>
-    {% csrf_token %}
-    {{ form.as_p}}
-    <input type="submit" value='Submit'>
-</form>
-<br>
-<a href="{% url 'restaurantDetails' restID=rest.id %}">Back</a>
+<div style="background-color: #616161; color: #FFFFFF; padding: 10px;">
+    <form action="" method='post'>
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value='Submit'>
+    </form>
+    <br>
+    <a href="{% url 'restaurantDetails' restID=rest.id %}">Back</a>
+</div>
 
 {% endblock %}
