--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,11 @@
               rgba(254, 209, 54, 0.75),
               rgba(255,255,255, 0.95)), url('https://images.pexels.com/photos/370984/pexels-photo-370984.jpeg');            
             background-size: cover;
-            background-repeat: no-repeat;}
+            background-repeat: no-repeat;
+            min-height: 100vh;}
+        h1 {
+            font-family: 'Oswald', sans-serif;
+        }
     </style>
 </head>
 <body>
