changed colour of buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,15 @@
             background-size: cover;
             background-repeat: no-repeat;
             min-height: 100vh;}
-        h1 {
-            font-family: 'Oswald', sans-serif;
+        .btn {
+            background: #fed136
+        }
+        .btn-success{
+            background: #fed136;
+            border-color: #fed137;
+        }
+        .btn-block {
+            background: #fed136
         }
     </style>
 </head>
