--- a/templates/restaurantReviews/editReviewer.html
+++ b/templates/restaurantReviews/editReviewer.html
@@ -22,7 +22,7 @@
         <br><br>
 
 
-        <button type="submit">Update</button>
+        <button class = 'btn btn-success btn-block' type="submit">Update</button>
     </form>
 
 {% endblock %}
