--- a/templates/restaurantReviews/updateRestaurant.html
+++ b/templates/restaurantReviews/updateRestaurant.html
@@ -15,7 +15,7 @@
     <form action="" method='post'>
         {% csrf_token %}
         {{form.as_p}}
-        <input type="submit" value='Submit'>
+        <input class = 'btn btn-success btn-block' type="submit" value='Submit'>
     </form>
     <br>
     <a href="{% url 'restaurantDetails' restID=rest.id %}">Back</a>
